# docstream-web

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  vercel.json
.github/: copilot-instructions.md
docstream-api/docstream_local/: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docstream-api/docstream_local/.github/workflows/: ci.yml  docs.yml
docstream-api/docstream_local/docker/: Dockerfile.prod
docstream-api/docstream_local/docs/: architecture.md  quickstart.md
docstream-api/docstream_local/docstream/: .dockerignore  CONTRIBUTING.md  KNOWN_ISSUES.md  __init__.py  demo.cast
docstream-api/docstream_local/docstream/.github/: PULL_REQUEST_TEMPLATE.md
docstream-api/docstream_local/docstream/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docstream-api/docstream_local/docstream/core/: __init__.py  extractor_v2.py  generator.py  renderer.py
docstream-api/docstream_local/docstream/demo_out/: document.tex
docstream-api/docstream_local/docstream/docker/: Dockerfile.dev
docstream-api/docstream_local/docstream/docs/: api-reference.md  contributing.md  index.md  self-hosting.md  templates.md
docstream-api/docstream_local/docstream/manual_tests/: test_extractor_real.py  test_full_pipeline.py  test_groq_fallback.py  test_renderer_real.py  test_structurer_real.py
docstream-api/docstream_local/docstream/models/: __init__.py  document.py
docstream-api/docstream_local/docstream/templates/: __init__.py  report.lua  resume.lua
docstream-api/docstream_local/docstream/test_dedup/: document.tex
docstream-api/docstream_local/docstream/test_fast/: document.tex
docstream-api/docstream_local/docstream/test_figures_v2/: document.tex
docstream-api/docstream_local/docstream/test_final/: document.tex
docstream-api/docstream_local/docstream/test_final_v3/: document.tex
docstream-api/docstream_local/docstream/test_final_v4/: document.tex
docstream-api/docstream_local/docstream/test_final_v5/: document.tex
docstream-api/docstream_local/docstream/test_final_v6/: document.tex
docstream-api/docstream_local/docstream/test_final_v7/: document.tex
docstream-api/docstream_local/docstream/test_final_v8/: document.tex
docstream-api/docstream_local/docstream/test_final_v9/: document.tex
docstream-api/docstream_local/docstream/test_ieee/: document.tex
docstream-api/docstream_local/docstream/test_kimi/: document.tex
docstream-api/docstream_local/docstream/test_output/: document.tex
docstream-api/docstream_local/docstream/test_output_report/: document.tex
docstream-api/docstream_local/docstream/test_pdfs/: list_gemini_models.py  run_real_tests.sh  test_api_real.py  test_edge_cases.sh  test_providers.py
docstream-api/docstream_local/docstream/test_report/: document.tex
docstream-api/docstream_local/docstream/test_split3/: document.tex
docstream-api/docstream_local/docstream/test_v4/: document.tex
docstream-api/docstream_local/docstream/test_with_images/: document.tex
docstream-api/docstream_local/docstream/tests/: conftest.py  test_api.py  test_cli.py  test_extractor.py  test_semantic_analyzer.py  test_template_matcher.py  test_v2_pipeline.py
docstream-api/docstream_local/docstream/utils/: helpers.py
docstream-api/docstream_local/examples/: convert_example.py
docstream-api/docstream_local/tests/: __init__.py  test_format_handlers.py  test_quality_checker.py  test_renderer.py  test_structurer.py
src/app/: error.tsx  (+5 more)
(+71 files in other folders)
